--- a/main.css
+++ b/main.css
@@ -58,12 +58,15 @@ body {
     margin: 10px;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 20px;
-    padding: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
-    color: #FFF;
+    color: white;
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
     width: 200px;
@@ -72,6 +75,7 @@ body {
     cursor: pointer;
     display: inline-block;
     border-radius: 25px;
+    text-decoration: none;
 }
 
 #boop:hover{
