--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	padding: 50px 250px;
+	padding: 30px 225px;
 	background-color: white;
 	border-radius: 45px;
 	text-align: center !important;
@@ -55,7 +55,7 @@ body {
 }
 
 #boop {
-    margin: 10px;
+    margin: 10px 40px;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 20px;
     padding-top: 20px;
