--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 #boop {
-    margin: 10px 40px;
+    margin: 10px 30px;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 20px;
     padding-top: 20px;
@@ -80,7 +80,7 @@ body {
 
 #boop:hover{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    margin: 8px 10px 12px;
+    margin: 30px;
 }
 
 #boop {background-image: linear-gradient(to right, pink 0%, lightblue 51%, lightpink 100%)}
