--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ body {
 
 #boop:hover{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-		margin: 1px 1px;
+		margin: 100px;
 }
 
 #boop {background-image: linear-gradient(to right, pink 0%, lightblue 51%, lightpink 100%)}
