--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 #boop {
-    margin: 10px 0px;
+    margin: 10px;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 20px;
     padding-top: 20px;
