--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	font-size: 12px;
+	display: inline-flex;
 }
 
 .yee {
@@ -80,7 +81,7 @@ body {
 
 #boop:hover{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-		margin: 100px;
+		margin: 50px;
 }
 
 #boop {background-image: linear-gradient(to right, pink 0%, lightblue 51%, lightpink 100%)}
